# KnowIt

./: .gitignore  CMakeLists.txt  README.md  design.drawio  res.qrc
autobuild/: build.ps1  main.ps1  nsis_KnowIt.nsi  qt_env.ps1  svn-update.ps1
doc/: KnowIt.md
res/i18n/: en.qm  en.ts  zh_simple.qm  zh_simple.ts  zh_traditional.qm  zh_traditional.ts
res/themes/: Dark.qss  Lite.qss  OSX_Dark.qss  OSX_Lite.qss
server/: KnowIt.py  requirements.txt
src/ApplicationContainer/FormMineIt/: formmineit.cpp  formmineit.h  formmineit.ui
src/ApplicationContainer/FormMineIt/FormDataset/: formdataset.cpp  formdataset.h  formdataset.ui
src/ApplicationContainer/FormMineIt/FormPlot/: formplot.cpp  formplot.h  formplot.ui
src/ApplicationContainer/FormMineIt/FormProperty/: formproperty.cpp  formproperty.h  formproperty.ui
src/ApplicationContainer/FormMineIt/FormProperty/DialogAdd/: dialogadd.cpp  dialogadd.h  dialogadd.ui
src/ApplicationContainer/FormMineIt/FormProperty/DialogEdit/: dialogedit.cpp  dialogedit.h  dialogedit.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditID/: editid.cpp  editid.h  editid.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditInfo/: editinfo.cpp  editinfo.h  editinfo.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditInfo/AnnotationsAndTags/: annotationsandtags.cpp  annotationsandtags.h  annotationsandtags.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditInfo/BasicInformation/: basicinformation.cpp  basicinformation.h  basicinformation.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditInfo/EditContainer/: editcontainer.cpp  editcontainer.h  editcontainer.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditInfo/EditContainer/PeakInfo/: peakinfo.cpp  peakinfo.h  peakinfo.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditInfo/EditContainer/SingleLineInfo/: singlelineinfo.cpp  singlelineinfo.h  singlelineinfo.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditInfo/Originate/: originate.cpp  originate.h  originate.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditInfo/SampleInformation/: sampleinformation.cpp  sampleinformation.h  sampleinformation.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditInfo/SpectralAcquisitionConditions/: spectralacquisitionconditions.cpp  spectralacquisitionconditions.h  spectralacquisitionconditions.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditInfo/SpectralData/: spectraldata.cpp  spectraldata.h  spectraldata.ui
src/ApplicationContainer/FormMineIt/FormProperty/EditURL/: editurl.cpp  editurl.h  editurl.ui
src/ApplicationMenu/: formapplicationmenu.cpp  formapplicationmenu.h  formapplicationmenu.ui
src/IndependentWindow/AutoUpdate/: autoupdate.cpp  autoupdate.h  autoupdate.ui
src/IndependentWindow/DownloadHelper/: downloadhelper.cpp  downloadhelper.h  downloadhelper.ui
src/IndependentWindow/FormSetting/: formsetting.cpp  formsetting.h  formsetting.ui
src/IndependentWindow/FormSetting/ServerSetting/: serversetting.cpp  serversetting.h  serversetting.ui
src/IndependentWindow/FormSetting/SpectralSetting/: spectralsetting.cpp  spectralsetting.h  spectralsetting.ui
src/IndependentWindow/FormSetting/UpdateSetting/: updatesetting.cpp  updatesetting.h  updatesetting.ui
src/IndependentWindow/HoverPopup/: hoverpopup.cpp  hoverpopup.h  hoverpopup.ui
src/components/MyChartView/: mychartview.h
src/components/MyGlobal/: myglobal.cpp  myglobal.h
src/components/MyHttp/: myhttp.cpp  myhttp.h
src/components/MyLog/: mylog.cpp  mylog.h
src/components/MySetting/: mysetting.cpp  mysetting.h
src/global/: g_define.h
src/main/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/main/About/: about.cpp  about.ui
src/main/SplashScreen/: splashscreen.cpp  splashscreen.h  splashscreen.ui
